Create Database Models

--- a/Web/ScatResale.Web/appsettings.json
+++ b/Web/ScatResale.Web/appsettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ScatResale;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS01;Database=ScatResale;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "SendGrid": {
+    "ApiKey": "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"
   },
   "Logging": {
     "LogLevel": {
