--- a/Data/ScatResale.Data/appsettings.json
+++ b/Data/ScatResale.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ScatResale;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS01;Database=ScatResale;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
