--- a/Web/ScatResale.Web/ScatResale.Web.csproj
+++ b/Web/ScatResale.Web/ScatResale.Web.csproj
@@ -17,6 +17,12 @@
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\css\colors\.DS_Store" />
+    <None Include="wwwroot\fonts\.DS_Store" />
+    <None Include="wwwroot\fonts\LineIcons.svg" />
+    <None Include="wwwroot\img\footer\.DS_Store" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
